--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 This contains NAnt and MSBuild tasks to run Ant, for documentation
 see doc.xhtml.  For the license see the file LICENSE.
 
+Binaries can be found at
+<http://stefan.samaflost.de/code/nant-msbuild-AntTask/>.
+
 I've compiled the code against NAnt 0.85rc3 and the version of MSBuild that
 shipped with Visual C# Express in November 2005, the results are
 AntTask-NAnt.dll compiled using MS Framework 1.1 (NAnt task only) and
